feat: slack test
Signed-off-by: Filipe Mota <filipe@unevenlabs.com>

--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -2,7 +2,7 @@ name: Continuous Delivery
 
 on:
   push:
-    branches: [main, development]
+    branches: [test]
 
 env:
   NODE_VERSION: "18.x"
@@ -50,17 +50,17 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
-        # if: steps.semantic.outputs.new_release_version != ''
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: |
-            ghcr.io/reservoirprotocol/indexer:latest
-            ghcr.io/reservoirprotocol/indexer:${{ github.sha }}
-          # ghcr.io/reservoirprotocol/indexer:${{ steps.semantic.outputs.new_release_version }}
-          # build-args: |
-          #   VERSION=${{ steps.semantic.outputs.new_release_version }}
+      # - name: Build and push
+      #   # if: steps.semantic.outputs.new_release_version != ''
+      #   uses: docker/build-push-action@v3
+      #   with:
+      #     push: true
+      #     tags: |
+      #       ghcr.io/reservoirprotocol/indexer:latest
+      #       ghcr.io/reservoirprotocol/indexer:${{ github.sha }}
+      #     # ghcr.io/reservoirprotocol/indexer:${{ steps.semantic.outputs.new_release_version }}
+      #     # build-args: |
+      #     #   VERSION=${{ steps.semantic.outputs.new_release_version }}
 
       # - name: Publish github release
       #   if: steps.semantic.outputs.new_release_version != ''
@@ -69,18 +69,18 @@ jobs:
       - name: Post to Slack
         if: ${{ always() }}
         id: slack
-        uses: slackapi/slack-github-action@v1.24.0
+        uses: unevenlabs/slack-github-action@v1.0.0
         with:
           channel-id: "ci"
           payload: |
             {
-              "text": "GitHub build result: ${{ job.status }}\nAuthor: ${{ github.actor }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "text": "GitHub build result: <status${{ job.status }}>\nAuthor: ${{ github.actor }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "GitHub build result: ${{ job.status }}\nAuthor: ${{ github.actor }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    "text": "GitHub build result: <status${{ job.status }}>\nAuthor: ${{ github.actor }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
                   }
                 }
               ]
@@ -104,25 +104,25 @@ jobs:
           token: ${{ secrets.DEVOPSBOT_TOKEN }}
           path: k8s-configs
 
-      - name: Deploy to Dev Environment
-        working-directory: k8s-configs
-        run: |
-          ./utils/version_update.sh \
-            ./dev/platform/indexer-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-goerli
-          ./utils/version_update.sh \
-            ./dev/platform/indexer-worker-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-worker-goerli
-          ./utils/version_update.sh \
-            ./dev/platform/indexer-websocket-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-websocket-goerli
-          ./utils/version_update.sh \
-            ./dev/platform/indexer-kafka-worker-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-kafka-worker-goerli
+      # - name: Deploy to Dev Environment
+      #   working-directory: k8s-configs
+      #   run: |
+      #     ./utils/version_update.sh \
+      #       ./dev/platform/indexer-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-goerli
+      #     ./utils/version_update.sh \
+      #       ./dev/platform/indexer-worker-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-goerli
+      #     ./utils/version_update.sh \
+      #       ./dev/platform/indexer-websocket-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-websocket-goerli
+      #     ./utils/version_update.sh \
+      #       ./dev/platform/indexer-kafka-worker-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-kafka-worker-goerli
 
   deploy-prod:
     name: Deploy to Production
@@ -131,7 +131,7 @@ jobs:
     needs: [build]
     environment: prod
     # if: github.ref == 'refs/heads/main' && needs.build.outputs.version != ''
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/test'
     steps:
       - name: Checkout repository k8s-configs
         uses: actions/checkout@v3
@@ -140,174 +140,174 @@ jobs:
           token: ${{ secrets.DEVOPSBOT_TOKEN }}
           path: k8s-configs
 
-      - name: Deploy to Prod Environment
-        working-directory: k8s-configs
-        run: |
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api.yaml \
-            ${{ github.sha }} \
-            indexer-api
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-arbitrum.yaml \
-            ${{ github.sha }} \
-            indexer-api-arbitrum
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-optimism.yaml \
-            ${{ github.sha }} \
-            indexer-api-optimism
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-polygon.yaml \
-            ${{ github.sha }} \
-            indexer-api-polygon
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-bsc.yaml \
-            ${{ github.sha }} \
-            indexer-api-bsc
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-sepolia.yaml \
-            ${{ github.sha }} \
-            indexer-api-sepolia
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-mumbai.yaml \
-            ${{ github.sha }} \
-            indexer-api-mumbai
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-base-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-api-base-goerli
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-arbitrum-nova.yaml \
-            ${{ github.sha }} \
-            indexer-api-arbitrum-nova
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-scroll-alpha.yaml \
-            ${{ github.sha }} \
-            indexer-api-scroll-alpha
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-zora-testnet.yaml \
-            ${{ github.sha }} \
-            indexer-api-zora-testnet
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-api-goerli
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-zora.yaml \
-            ${{ github.sha }} \
-            indexer-api-zora
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-avalanche.yaml \
-            ${{ github.sha }} \
-            indexer-api-avalanche
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-api-base.yaml \
-            ${{ github.sha }} \
-            indexer-api-base
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker.yaml \
-            ${{ github.sha }} \
-            indexer-worker
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-arbitrum.yaml \
-            ${{ github.sha }} \
-            indexer-worker-arbitrum
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-master.yaml \
-            ${{ github.sha }} \
-            indexer-worker-master
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-optimism.yaml \
-            ${{ github.sha }} \
-            indexer-worker-optimism
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-polygon-1.yaml \
-            ${{ github.sha }} \
-            indexer-worker-polygon-1
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-polygon-2.yaml \
-            ${{ github.sha }} \
-            indexer-worker-polygon-2
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-polygon-3.yaml \
-            ${{ github.sha }} \
-            indexer-worker-polygon-3
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-bsc-1.yaml \
-            ${{ github.sha }} \
-            indexer-worker-bsc-1
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-bsc-2.yaml \
-            ${{ github.sha }} \
-            indexer-worker-bsc-2
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-sepolia.yaml \
-            ${{ github.sha }} \
-            indexer-worker-sepolia
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-mumbai.yaml \
-            ${{ github.sha }} \
-            indexer-worker-mumbai
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-base-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-worker-base-goerli
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-arbitrum-nova.yaml \
-            ${{ github.sha }} \
-            indexer-worker-arbitrum-nova
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-scroll-alpha.yaml \
-            ${{ github.sha }} \
-            indexer-worker-scroll-alpha
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-zora-testnet.yaml \
-            ${{ github.sha }} \
-            indexer-worker-zora-testnet
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-worker-goerli
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-zora.yaml \
-            ${{ github.sha }} \
-            indexer-worker-zora
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-avalanche.yaml \
-            ${{ github.sha }} \
-            indexer-worker-avalanche
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-base.yaml \
-            ${{ github.sha }} \
-            indexer-worker-base
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-websocket-ethereum.yaml \
-            ${{ github.sha }} \
-            indexer-websocket-ethereum
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-websocket-polygon.yaml \
-            ${{ github.sha }} \
-            indexer-websocket-polygon
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-websocket-goerli.yaml \
-            ${{ github.sha }} \
-            indexer-websocket-goerli
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-kafka-worker.yaml \
-            ${{ github.sha }} \
-            indexer-kafka-worker
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-worker-polygon-master.yaml \
-            ${{ github.sha }} \
-            indexer-worker-polygon-master
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-kafka-worker-polygon.yaml \
-            ${{ github.sha }} \
-            indexer-kafka-worker-polygon
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-kafka-worker-arbitrum.yaml \
-            ${{ github.sha }} \
-            indexer-kafka-worker-arbitrum
-          ./utils/version_update.sh \
-            ./prod/platform/indexer-kafka-worker-optimism.yaml \
-            ${{ github.sha }} \
-            indexer-kafka-worker-optimism
+      # - name: Deploy to Prod Environment
+      #   working-directory: k8s-configs
+      #   run: |
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-arbitrum.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-arbitrum
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-optimism.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-optimism
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-polygon.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-polygon
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-bsc.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-bsc
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-sepolia.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-sepolia
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-mumbai.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-mumbai
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-base-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-base-goerli
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-arbitrum-nova.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-arbitrum-nova
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-scroll-alpha.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-scroll-alpha
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-zora-testnet.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-zora-testnet
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-goerli
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-zora.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-zora
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-avalanche.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-avalanche
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-api-base.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-api-base
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-arbitrum.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-arbitrum
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-master.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-master
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-optimism.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-optimism
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-polygon-1.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-polygon-1
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-polygon-2.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-polygon-2
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-polygon-3.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-polygon-3
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-bsc-1.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-bsc-1
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-bsc-2.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-bsc-2
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-sepolia.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-sepolia
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-mumbai.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-mumbai
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-base-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-base-goerli
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-arbitrum-nova.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-arbitrum-nova
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-scroll-alpha.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-scroll-alpha
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-zora-testnet.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-zora-testnet
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-goerli
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-zora.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-zora
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-avalanche.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-avalanche
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-base.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-base
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-websocket-ethereum.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-websocket-ethereum
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-websocket-polygon.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-websocket-polygon
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-websocket-goerli.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-websocket-goerli
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-kafka-worker.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-kafka-worker
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-worker-polygon-master.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-worker-polygon-master
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-kafka-worker-polygon.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-kafka-worker-polygon
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-kafka-worker-arbitrum.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-kafka-worker-arbitrum
+      #     ./utils/version_update.sh \
+      #       ./prod/platform/indexer-kafka-worker-optimism.yaml \
+      #       ${{ github.sha }} \
+      #       indexer-kafka-worker-optimism
