--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -74,13 +74,13 @@ jobs:
           channel-id: "ci"
           payload: |
             {
-              "text": "GitHub build result: <status${{ job.status }}>\nAuthor: ${{ github.actor }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "text": "GitHub build result: <status${{ job.status }}status>\nAuthor: <author${{ github.actor }}author>\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "GitHub build result: <status${{ job.status }}>\nAuthor: ${{ github.actor }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    "text": "GitHub build result: <status${{ job.status }}status>\nAuthor: <author${{ github.actor }}author>\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
                   }
                 }
               ]
