--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -47,7 +47,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: xxxxxxxxxxxxx #${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Build and push
