--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -47,8 +47,10 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: xxxxxxxxxxxxx #${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: xxxxxxxxxxxxx
+          #${{ github.repository_owner }}
+          password: ccccccccccccccc
+          # ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Build and push
       #   # if: steps.semantic.outputs.new_release_version != ''
