--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -47,10 +47,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: xxxxxxxxxxxxx
-          #${{ github.repository_owner }}
-          password: ccccccccccccccc
-          # ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Build and push
       #   # if: steps.semantic.outputs.new_release_version != ''
@@ -118,7 +116,7 @@ jobs:
       - name: Checkout repository k8s-configs
         uses: actions/checkout@v3
         with:
-          repository: unevenlabs/k8s-configs
+          repository: unevenlabs/k8s-configs2
           token: ${{ secrets.DEVOPSBOT_TOKEN }}
           path: k8s-configs
 
