--- a/.github/workflows/continuous-delivery.yaml
+++ b/.github/workflows/continuous-delivery.yaml
@@ -174,6 +174,10 @@ jobs:
             ./prod/platform/indexer-worker-tx-arbitrum.yaml \
             ${{ github.sha }} \
             indexer-worker-tx-arbitrum
+          ./utils/version_update.sh \
+            ./prod/platform/indexer-worker-tx-polygon.yaml \
+            ${{ github.sha }} \
+            indexer-worker-tx-polygon
       - name: Post to Slack
         if: ${{ always() }}
         id: slack-deploy-tx-prod
